--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   ],
   "devDependencies": {
     "standard": "^8.6.0",
-    "tap": "^10.5.1"
+    "tap": "^10.5.1",
+    "@types/node": "^12.0.2",
+    "typescript": "^3.4.5"
   }
 }
