--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "README.md"
   ],
   "devDependencies": {
-    "standard": "^8.6.0",
-    "tap": "^10.5.1",
     "@types/node": "^12.0.2",
+    "nyc": "^14.1.1",
+    "tap": "^14.0.0",
     "typescript": "^3.4.5"
   }
 }
